Remove the percent option it makes too much bug with the display replace it with a bigger DELETE button it's easier

--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ button {
   width: 100%;
 }
 
+.back {
+  grid-column: 2/4;
+}
+
 .zero {
   grid-column: 1 / 3;
 }
